--- a/Test/Test/Test.csproj
+++ b/Test/Test/Test.csproj
@@ -19,6 +19,8 @@
       <PackageReference Include="MySqlConnector" Version="2.3.5" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
       <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="7.0.0" />
+      <PackageReference Include="python" Version="3.11.8" />
+      <PackageReference Include="pythonnet" Version="3.0.3" />
     </ItemGroup>
 
 </Project>
